welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: identifier expected but integer literal found.
					setCouleurBrosse(T[0]);
                                                           ^Array2:28: error: ']' expected but '}' found.
				}
                                ^